// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon or Image renders icon with background 1`] = `
<div>
  <div
    class="backgrounded-icon"
    style="background: blue;"
  >
    <i
      class="fa fa-foobar"
      title="foo bar title"
    />
  </div>
</div>
`;

exports[`Icon or Image renders icon with title and alt if icon and no image are passed in 1`] = `
<div>
  <i
    class="fa fa-foobar"
    title="foo bar title"
  />
</div>
`;

exports[`Icon or Image renders image with title and alt if image is passed in 1`] = `
<div>
  <img
    alt="foo bar title"
    src="foo/bar.png"
    title="foo bar title"
  />
</div>
`;

exports[`Icon or Image renders nothing if no icon and no image are passed in 1`] = `
<div>
  
</div>
`;
